<resources>
    <string name="app_name">Salem Application</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="edit_image">Edit Image</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="save">save</string>
    <string name="add_friend">Add friend</string>
    <string name="default_friendName">Friend Name</string>
</resources>